mxfdemux: Set stream tags to NULL after unreffing

Otherwise we might try to unref them a second time a little bit later.

https://bugzilla.gnome.org/show_bug.cgi?id=777503